# bhell

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  bhell.sln  bhell.vcxproj
include/: actor.h  clock.h  destructible.h  font_renderer.h  game.h  texture_manager.h  vec2.h  world.h
src/: CMakeLists.txt  actor.cpp  font_renderer.cpp  game.cpp  main.cpp  texture_manager.cpp  world.cpp
